search complete... working with a minor bug.  results below search bar not showing like before

--- a/Puso_DJS11/components/SearchBar.css
+++ b/Puso_DJS11/components/SearchBar.css
@@ -1,5 +1,5 @@
 .input-wrapper {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     width: 100%;
     border-radius: 10px;
     height: 2.5rem;
